--- a/src/styles/Score.css
+++ b/src/styles/Score.css
@@ -4,8 +4,3 @@
     color: #C89B3C;
     text-shadow: 1px 1px 2px #010A13, 0 0 1em #010A13, 0 0 0.2em #010A13;
 }
-@media (max-width: 800px) {
-    .Score{
-        font-size: 1.5rem;
-    }
-}
